Add Electrocardiogram examples in sonification.qmd

--- a/references.bib
+++ b/references.bib
@@ -204,3 +204,41 @@
   url = {https://medium.com/@swarajkalbande123/conways-game-of-life-life-on-computer-b7edfc85d21a},
   note = {Accessed May 26, 2025}
 }
+
+@misc{lupi2017,
+  author = {Lupi, Giorgia},
+  title = {Data humanism: the revolutionary future of data visualization},
+  journal = {PrintMag},
+  year = {2017},
+  url = {https://www.printmag.com/article/data-humanism-future-of-data-visualization/},
+  note = {Accessed Aug 2024}
+}
+
+@inproceedings{canossa2022,
+  author = {Canossa, Alessandro and Pardo, Luis Laris and Tran, Michael and Angulo, Alexis Lozano},
+  title = {From Data Humanism to Metaphorical Visualization–An Educational Game Case Study},
+  booktitle = {International Conference on Human-Computer Interaction},
+  publisher = {Springer},
+  address = {Cham},
+  year = {2022},
+  pages = {109--117}
+}
+
+@inproceedings{kim2019,
+  author = {Kim, Nam Wook and Im, Hyejin and Riche, Nathalie Henry and Wang, Alicia and Gajos, Krzysztof and Pfister, Hanspeter},
+  title = {Dataselfie: Empowering people to design personalized visuals to represent their data},
+  booktitle = {Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  year = {2019},
+  pages = {1--12}
+}
+
+@article{hallnas2001,
+  author = {Hallnäs, Lars and Redström, Johan},
+  title = {Slow technology–designing for reflection},
+  journal = {Personal and Ubiquitous Computing},
+  volume = {5},
+  year = {2001},
+  pages = {201--212}
+}
