--- a/index.qmd
+++ b/index.qmd
@@ -38,19 +38,13 @@ By approaching programming as a creative practice, this book invites you to thin
 
 ## Why *Code That Sounds*?
 
-The title may appear straightforward at first, but upon deeper reflection, it reveals a rich conceptual landscape that frames the entire approach of this book. More than a literal description of code that produces audio, it invites us to consider the interplay between computation, perception, and artistic expression. In this book, we explore how code becomes a medium for crafting sonic experiences—how it can be shaped, composed, and performed to produce not only functional systems, but also resonant and meaningful works of art.
+At first glance, the title *Code That Sounds* may seem literal—code that produces audio. But it also opens a conceptual field that reflects the spirit of this book: the convergence of computation, sound, and creative expression. We treat code not only as a functional tool for generating and processing sound, but as a medium for composition, experimentation, and discovery.
 
-At the most immediate level, the phrase refers to the act of writing code that generates sound. Whether synthesizing a sine wave, constructing a step sequencer, or routing audio signals in real time, we are engaging with code as a tool for sonic creation. Tools like Pure Data make this direct connection between programming and audio particularly tangible: the act of connecting objects, defining behaviors, and mapping parameters becomes inseparable from the process of producing audible outcomes. In this sense, *Code That Sounds* expresses the essential relationship between the logical structure of algorithms and the materiality of sound.
+The title highlights the immediate activity of coding to produce audio: from simple sine waves to complex interactive systems, tools like Pure Data turn logical structures into audible forms. But it also gestures toward a deeper, more poetic reading. In English, “sounds” doesn’t only refer to audio—it also implies resonance, meaning, and sensibility. A line of code can *sound right*, not just technically but aesthetically. This expressive quality reveals code as a language with tone, rhythm, and intention.
 
-Yet the phrase also invites a more poetic interpretation. "Sounds," in English, can refer not only to audio but also to the way something resonates intellectually or emotionally. Code, then, is not merely a set of instructions—it is a language with its own voice, rhythm, and character. A piece of code can "sound right" in the same way that a musical phrase does. This expressive quality of code becomes especially relevant in the context of creative practice. As we will see throughout the book, the aesthetic choices embedded in code—its structure, logic, timing, and responsiveness—are as crucial as the sounds it ultimately produces. In this light, the act of programming becomes a compositional gesture, where syntax and semantics coalesce into a form of audible thinking.
+Through this lens, *Code That Sounds* positions programming as a creative act—part design, part composition. It invites us to explore how code becomes an audible thought, a structure that lives and reacts, especially in interactive systems. The code doesn’t just *produce* sound—it *performs* it.
 
-This perspective positions code as a bridge between traditionally separate domains: between the analytical and the intuitive, the procedural and the performative, the technical and the poetic. Sound has long been associated with music, art, and embodiment; code, with abstraction and logic. But when we write *Code That Sounds*, we dissolve these boundaries. We begin to treat code not as a rigid mechanism, but as a generative medium—capable of producing form, emotion, and experience. The phrase thus embodies the interdisciplinary ethos that guides this book, where creative coding is not merely about mastering a tool, but about exploring how different ways of knowing and making converge through sound.
-
-There is also a sense of agency embedded in the phrase. This is not just code that happens to produce sound—it is code that is designed to sound. The use of the active verb implies intention, purpose, and dynamism. It reminds us that the systems we build are not passive containers for sound, but active participants in shaping it. In interactive contexts especially, where the code responds to movement, sensors, or user input, the sounding becomes an emergent property of a living system. Here, the code is not simply a means to an end—it is the co-author of a sonic event.
-
-*Code That Sounds* gestures toward a methodology rooted in exploration and discovery. It encourages us to treat code as something to be listened to, not just debugged. What does a patch “sound like” when put into motion? What happens when you tweak a parameter or rewire a signal path? This book invites you to approach creative coding as a space of experimentation—where understanding emerges through making, and insight through listening. We embrace this attitude by providing examples, sketches, and exercises that are meant not to be followed blindly, but to be remixed, transformed, and extended.
-
-*Code That Sounds* captures the spirit of this book: it is about making sound with code, but also about listening to the voice of code itself. It is about finding resonance between systems and sensations, and about using programming as a medium for creative exploration. As you work through the following chapters, we encourage you to tune your ears not only to the sounds that emerge, but to the ideas, questions, and possibilities that those sounds carry with them. This is not just about learning how to code—this is about learning how to listen to what code can become.
+This book is shaped by that ethos. We approach creative coding not simply as a technical challenge, but as a practice of listening, of composing with systems, of learning through making. *Code That Sounds* is both our method and our invitation: to write, to hear, and to imagine what code can become.
 
 ## From Problem to Algorithm
 
@@ -93,6 +87,83 @@ Another important methodological decision in this book is our emphasis on the **
 By concentrating first on backend logic, we build a strong foundation that can later support more refined user interactions. GUI design will certainly be addressed, but in future chapters, when we are equipped with a clearer understanding of how our systems behave and how we want them to evolve. In other words, we treat the visual layer as a representation of logic, not a replacement for it.
 
 This book is an invitation to approach creative coding not as a set of shortcuts or pre-made solutions, but as a *process of inquiry*. We will get our hands dirty, make mistakes, and revise along the way. In doing so, we learn not just how to build systems, but how to think with and through them. That is the deeper promise of creative code.
+   
+## Book Structure
+
+```{mermaid}
+flowchart LR
+    A[Code that Sounds<br/>Creative Coding and Sonic Thinking with Pure Data] --> B[Preface]
+    
+    A --> C[Play and Rec]
+    C --> C1[Arrays and Tables]
+    C --> C2[readsf~ and writesf~]
+    C --> C3[Basic Recording Concepts]
+    
+    A --> D[Synthesis]
+    D --> D1[Oscillators]
+    D --> D2[Additive Synthesis]
+    D --> D3[Subtractive Synthesis]
+    D --> D4[Modulation Techniques]
+    D4 --> D4a[AM - Amplitude Modulation]
+    D4 --> D4b[RM - Ring Modulation]
+    D4 --> D4c[FM - Frequency Modulation]
+    
+    A --> E[Sonification]
+    E --> E1[Electrocardiogram Step Sequencer]
+    E1 --> E1a[ECG Data Processing]
+    E1 --> E1b[Step Sequence Generation]
+    E1 --> E1c[Creative Applications]
+    
+    E --> E2[Image Sonification with RGBA Data]
+    E2 --> E2a[Image Loading and Analysis]
+    E2 --> E2b[Pixel Data Extraction]
+    E2 --> E2c[Audio Synthesis from Color]
+    
+    E --> E3[Linear Image Scanner]
+    E3 --> E3a[Static Image Scanning]
+    E3 --> E3b[Dynamic Scan Points]
+    E3 --> E3c[Frequency Mapping]
+    
+    E --> E4[Live Camera Scanner]
+    E4 --> E4a[Real-time Video Processing]
+    E4 --> E4b[Enhanced Controls]
+    E4 --> E4c[Interactive Applications]
+    
+    A --> F[Space]
+    F --> F1[Stereophonic Spatialization]
+    F1 --> F1a[Intensity Panning]
+    F1 --> F1b[Amplitude and Phase]
+    F1 --> F1c[Trigonometric Implementation]
+    
+    F --> F2[Quadraphonic Systems]
+    F2 --> F2a[John Chowning Model]
+    F2 --> F2b[Lookup Tables]
+    F2 --> F2c[Phase Offsets]
+    F2 --> F2d[Distance Modeling]
+    
+    F --> F3[Reverberation Modeling]
+    F3 --> F3a[Sabine Formula]
+    F3 --> F3b[Absorption Coefficients]
+    F3 --> F3c[Implementation Techniques]
+    
+    A --> G[Bjorklund Algorithm]
+    G --> G1[Euclidean Rhythms]
+    G --> G2[Pure Data Implementation]
+    G --> G3[External Development in C]
+    
+    A --> H[Anexo]
+    H --> H1[Sonification Artworks]
+    H --> H2[Reference Materials]
+    
+    style A fill:#e1f5fe
+    style B fill:#f3e5f5
+    style C fill:#fff3e0
+    style D fill:#e8f5e8
+    style E fill:#fce4ec
+    style F fill:#f1f8e9
+    style G fill:#e0f2f1
+    style H fill:#fafafa
+```
 
 ## Contributing
 
@@ -103,10 +174,6 @@ Do not write me emails with questions about PD.
 
 Please, if you have questions about PD, post them on the [Pure Data forum](https://forum.pdpatchrepo.info/), the [Pd mailing lists](https://lists.iem.at/postorius/lists/), or the [Facebook PD Group](https://www.facebook.com/groups/4729684494).
 :::
-
-## Contact
-
-If you have any questions, comments, or feedback about this book, please feel free to reach out to me at [eabregu.dev@gmail.com](mailto:eabregu.dev@gmail.com). I would love to hear from you!
 
 ## Acknowledgements
 
