Add Sustractive Synthesis chapter in synthesis.qmd

--- a/references.bib
+++ b/references.bib
@@ -242,3 +242,12 @@
   year = {2001},
   pages = {201--212}
 }
+
+@misc{bristow-johnson2024,
+  author = {Robert Bristow-Johnson},
+  title = {Cookbook formulae for audio equalizer biquad filter coefficients},
+  howpublished = {\url{https://webaudio.github.io/Audio-EQ-Cookbook/audio-eq-cookbook.html}},
+  note = {Adapted from Audio-EQ-Cookbook.txt, by Robert Bristow-Johnson, with permission. Editors: Raymond Toy, Doug Schepers},
+  year = {2024},
+  urldate = {2024-12-19}
+}
