Add Additive synthesis section

--- a/references.bib
+++ b/references.bib
@@ -251,3 +251,13 @@
   year = {2024},
   urldate = {2024-12-19}
 }
+
+@book{puckette2007,
+  author = {Puckette, Miller},
+  title = {The Theory and Technique of Electronic Music},
+  year = {2007},
+  publisher = {World Scientific Publishing},
+  doi = {10.1142/6277},
+  url = {https://msp.ucsd.edu/techniques/v0.11/book-html/},
+  note = {Available online}
+}
